# testing-orca

./: .gitignore  LICENSE  package-lock.json  package.json
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
.next/server/app/: dashboard.html  dashboard.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
.next/server/chunks/: 250.js  286.js
.next/server/pages/: 404.html  500.html
.next/static/css/: 30e8b94f784a4151.css  (+3 more)
app/: globals.css  layout.tsx  page.tsx
app/(marketing)/: page.tsx
app/components/: navbar.css  navbar.tsx
app/dashboard/: layout.tsx  page.tsx
app/styles/: globals.css
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 5d392fe9267b_merge_heads.py  c993a17b0f4d_create_fx_universe_and_market_prices.py  e7c1cdbda0b1_init.py
backend/app/: db.py  main.py
backend/app/api/routes/: health.py
backend/app/common/: responses.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: _init_.py  fx_universe.py  market_prices.py
backend/app/routers/: __init__.py  screener.py
backend/docker/: Dockerfile
(+187 files in other folders)
